# OOP_2025_Final-Project

./: CMakeLists.txt  Circuit.cpp  Circuit.h  Component.cpp  Component.h  ComponentFactory.cpp  ComponentFactory.h  Dialogs.cpp  Dialogs.h  NetworkDialog.cpp  NetworkDialog.h  NetworkManager.cpp  NetworkManager.h  PlotWindow.cpp  PlotWindow.h  README.md  SchematicWidget.cpp  SchematicWidget.h  main_cli.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
